--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </script>
 </head>
 <body>
+  <h1>제목을 입력하세요</h1>
   <div id="player"></div>
   <button>기능2 버튼</button>
+  <button>기능3 버튼</button>
 </body>
 </html>
