--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>생존코딩 만세</title>
+  <title>여기도 고치겠지?</title>
   <script>
-      const player = document.getElementById("player");
+      console.log("여기도 고치겠지?ㅋㅋ");
   </script>
 </head>
 <body>
-  <div id="player"></div>
-  <button>기능2 버튼</button>
+  충돌!!
+  <div class="player">
+    여기도 고치겠지? ㅋㅋ
+  </div>
+
+  충돌!!
+  
+  <input type="button">여기도 고치겠지?? 버튼</button>
+  ㅎㅎㅎㅎㅎ
+  충돌 나겠지?
 </body>
 </html>
