--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>생존코딩 만세</title>
+  <title>증강현실 시스템학과</title>
   <script>
       const player = document.getElementById("player");
   </script>
 </head>
 <body>
   <div id="player"></div>
-  <button>기능2 버튼</button>
+  <div>>증강과 웹 프로그래밍 수업</div>
+  충돌나게 만들기!
 </body>
 </html>
