--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>여기도 고치겠지?</title>
+  <title>여기는타이틀</title>
   <script>
       console.log("여기도 고치겠지?ㅋㅋ");
   </script>
 </head>
 <body>
-  충돌!!
+  여기는 body
   <div class="player">
-    여기도 고치겠지? ㅋㅋ
+    여기는div
   </div>
 
   충돌!!
