--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>증강현실 시스템학과</title>
+  <title>생존!!!</title>
   <script>
       console.log("여기도 고치겠지?ㅋㅋ");
   </script>
