--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>생존????????!!!</title>
   <script>
       console.log("여기도 고치겠지?ㅋㅋ");
-      console.log("또 고치겠지?ㅋㅋ");
+      console.log("여기도 고치겠지?ㅋㅋ2");
   </script>
 </head>
 <body>
